css/card.css
body {
  display: grid;
  place-items: center;
}

.card {
  background-color: var(--card-bg);
  padding: 1.6rem;
  border-radius: 1rem;

  text-align: center;
  width: 90%;
  max-width: 320px;
  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);

  & .card__img {
    margin-bottom: 2.4rem;
  }

  & .card__img img {
    border-radius: 1rem;
  }

  & .card__title {
    font-size: 2.2rem;
    color: var(--slate-900);

    margin-bottom: 1rem;
  }

  & .card__desc {
    color: var(--slate-500);
    margin-bottom: 4rem;
    max-width: 250px;
    margin: 0 auto calc(4rem - 16px) auto;
  }
}

